# artof-core

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  entrypoint.sh  install.sh  update.sh
.github/workflows/: ci-debian.yml  ci-docker.yml  ci.yml
artof-core/DEBIAN/: control
artof-core/var/lib/ilvo/: config.json  redis.init.json  settings.json  types.json
artof-core/var/lib/ilvo/field/example_capturing/: info.json
artof-core/var/lib/ilvo/field/example_capturing/tasks/Task1/: Task1.dbf
artof-core/var/lib/ilvo/field/example_capturing/tasks/Task2/: Task2.dbf
artof-core/var/lib/ilvo/field/example_flame_weeding/: info.json
artof-core/var/lib/ilvo/field/example_image_capturing/: info.json
artof-core/var/lib/ilvo/field/example_soil_sampling/: info.json
artof-core/var/lib/ilvo/implement/: auto-label.json
config-master/: config.json  types.json
doc/: Doxyfile
files/field/example_discrete/: info.json
files/field/example_discrete/tasks/Task1/: points.dbf
files/field/penetrometer_s15/: info.json
files/field/penetrometer_s15/geofence/: geofence.shp  geofence.shx
files/field/penetrometer_s15/tasks/Task1/: Task1.dbf  Task1.shx
ilvo/: docker-compose.yml
ilvo/data/: config.json  redis.init.json  settings.json  types.json
ilvo/data/field/example/: info.json
ilvo/data/field/example/tasks/Task1/: Task1.shp  Task1.shx
ilvo/data/field/example_capturing/tasks/Task2/: Task2.shp  Task2.shx
ilvo/data/field/example_soil_sampling/tasks/Task1/: points.shx
ilvo/data/field/example_spraying/: info.json
ilvo/data/implement/: flame-weeder.json  spray-boom.json
include/Exceptions/: FileExceptions.hpp  NmeaExceptions.hpp  PlcExceptions.hpp  RedisExceptions.hpp  RobotExceptions.hpp
include/Gps/: GpsDevice.h  Ntrip.h  Simplertk3b.h  Stonex.h
include/Navigation/: Navigation.h  NavigationControl.h
include/Operation/: ImplementControl.h  Operation.h
include/Simulation/: Simulation.h
include/System/: IlvoAddon.h  IlvoJob.h  IlvoJobData.h  IlvoProcess.h  SystemManager.h
include/Utils/CmdLine/: CmdLineParser.h
include/Utils/Docker/: DockerClient.h  DockerRegistry.h
include/Utils/File/: File.h  PointCsvFile.h  PointData.h  PointShapeFile.h
include/Utils/Geometry/: Angle.h  Arc.h  Geometry.h  GeometryVector.h  Line.h  Point.h  Polygon.h  Transform.h
include/Utils/Logging/: LoggerStream.h
include/Utils/Nmea/: Nmea.h  NmeaMessage.h  NmeaMessagePack.h
include/Utils/Peripheral/: Peripheral.h  Serial.h  Socket.h
include/Utils/Pid/: PidController.h
include/Utils/Redis/: Plc.h  PlcVariableManager.h  RedisStream.h  Variable.h  VariableManager.h
include/Utils/Settings/: Field.h  Gps.h  Hitch.h  Implement.h  Navigation.h  Platform.h  Robot.h  Section.h  State.h  Task.h  Traject.h
include/Utils/String/: String.h  Uuid.h
include/Utils/Timing/: Clk.h  Logic.h  Timing.h
src/Gps/: CMakeLists.txt  GpsDevice.cpp  Ntrip.cpp  Simplertk3b.cpp  Stonex.cpp
src/Navigation/: CMakeLists.txt  Navigation.cpp  NavigationControl.cpp
src/Operation/: CMakeLists.txt  ImplementControl.cpp  Operation.cpp
src/RobotPlc/: CMakeLists.txt  RobotPlc.cpp
src/Simulation/: CMakeLists.txt  Simulation.cpp
src/System/: CMakeLists.txt  IlvoAddon.cpp  IlvoJob.cpp  IlvoJobData.cpp  IlvoProcess.cpp  SystemManager.cpp
src/UnitTest/: ArcTest.cpp  CMakeLists.txt  GpsTest.cpp  LineTest.cpp  LoggerTest.cpp  PlatformSettingsTest.cpp  PolygonTest.cpp  ShapeTest.cpp  TrajectTest.cpp  TransformTest.cpp  TransformTestOrder.cpp
src/UnitTest/files/robot/: types.json
src/UnitTest/files/robot/field/Penetrometer_s15/tasks/Task1/: Task1.shp
src/UnitTest/files/robot/field/Penetrometer_s15/traject/: traject.shp  traject.shx
src/UnitTest/files/robot/field/blok3/: info.json
src/UnitTest/files/robot/field/blok3/geofence/: geofence.dbf  geofence.shp  geofence.shx
src/UnitTest/files/robot/field/blok3/tasks/Task1/: Task1.dbf  Task1.shp  Task1.shx
src/UnitTest/files/robot/field/blok3/tasks/Task2/: Task2.shp  Task2.shx
src/UnitTest/files/robot/field/blok3/traject/: traject.shp  traject.shx
src/UnitTest/files/robot/field/example/: info.json
src/UnitTest/files/robot/field/example_discrete/tasks/Task1/: points.shp
src/UnitTest/files/testline/: testline.dbf  testline.shp  testline.shx
src/UnitTest/files/testmultipoint/: testmultipoint.dbf  testmultipoint.shp  testmultipoint.shx
src/UnitTest/files/testmultipolygon/: testmultipolygon.dbf  testmultipolygon.shp  testmultipolygon.shx
src/UnitTest/files/testpolygon/: testpolygon.shp  testpolygon.shx
src/UnitTest/files/testtransform/: robot-with-hitches.json  robot.json
src/Utils/: CMakeLists.txt
src/Utils/CmdLine/: CmdLineParser.cpp
src/Utils/Docker/: DockerClient.cpp  DockerRegistry.cpp
src/Utils/File/: File.cpp  PointCsvFile.cpp  PointData.cpp  PointShapeFile.cpp
src/Utils/Geometry/: Angle.cpp  Arc.cpp  Line.cpp  Point.cpp  Polygon.cpp  Transform.cpp
src/Utils/Logging/: LoggerStream.cpp
src/Utils/Nmea/: Nmea.cpp  NmeaMessagePack.cpp
src/Utils/Peripheral/: Peripheral.cpp  Serial.cpp  Socket.cpp
src/Utils/Pid/: PidController.cpp
src/Utils/Redis/: Plc.cpp  PlcVariableManager.cpp  RedisStream.cpp  Variable.cpp  VariableManager.cpp
src/Utils/Settings/: Field.cpp  Gps.cpp  Hitch.cpp  Implement.cpp  Platform.cpp  Robot.cpp  Section.cpp  State.cpp  Task.cpp  Traject.cpp
src/Utils/String/: String.cpp  Uuid.cpp
src/Utils/Timing/: Clk.cpp  Logic.cpp  Timing.cpp
